--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.22.3",
+    "react-swipeable": "^7.0.2",
     "react-toastify": "^11.0.5",
     "swr": "^2.2.5",
     "zustand": "^4.5.2"
